--- a/wc/hw.html
+++ b/wc/hw.html
@@ -47,8 +47,6 @@
       customElements.define("hello-farming-world", HelloFarmingWorld);
     </script>
 
-    <hello-farming-world>
-      <button>Farming Rules!</button>
-    </hello-farming-world>
+    <hello-farming-world></hello-farming-world>
   </body>
 </html>
