--- a/wc/hw.html
+++ b/wc/hw.html
@@ -17,6 +17,7 @@
     <style>
       img {
         border-radius: 50%;
+        border: 1px solid #99ccff;
       }
     </style>
     <img
@@ -27,21 +28,50 @@
     <script>
       class HelloFarmingWorld extends HTMLElement {
         constructor() {
+          // Always call super first in constructor
           super();
+          // --  write element functionality in here
           // Attach a shadow root to the element.
           let shadowRoot = this.attachShadow({ mode: "open" });
           shadowRoot.innerHTML = `<p>Hello Farming World!</p>
           <p>Remembering Johnny Appleseed and G. Nammalvar!</p>
 
-           <img width="400" src='https://img.apmcdn.org/5bb55eea8ffc20aef57401b38fdcea93acca15a8/widescreen/8864a0-20200529-johnny-appleseed-04.jpg'/>
-           <img with="400" src='https://im.rediff.com/money/2010/mar/17nam4.jpg'/>
+           <img width="400"  src='https://img.apmcdn.org/5bb55eea8ffc20aef57401b38fdcea93acca15a8/widescreen/8864a0-20200529-johnny-appleseed-04.jpg'/>
+           <img with="400"   src='https://im.rediff.com/money/2010/mar/17nam4.jpg'/>
            <hr/>
           `;
 
           const button = document.createElement("button");
+          button.setAttribute('class', 'btn-primary');
           button.onclick = () => alert("Yes!");
           button.innerText = "Farming Rules!";
           shadowRoot.append(button);
+
+          // Create some CSS to apply to the shadow dom
+          const style = document.createElement('style');
+          style.textContent = `
+          img { border-radius: 50%; 
+            border: 3px solid #99ccff;
+
+           } 
+            
+
+           .btn-primary {
+            font-weight: 400;
+            text-align: center;
+            line-height: 1.5;
+            font-size: 1rem;
+            
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;  
+            border:1px solid #99ccff;
+            padding: 4px;
+          `;
+           // Attach the created elements to the shadow dom
+           shadowRoot.appendChild(style);
+
+
         }
       }
       customElements.define("hello-farming-world", HelloFarmingWorld);
