--- a/js/l1/l1.html
+++ b/js/l1/l1.html
@@ -17,6 +17,9 @@
 
     <textarea readonly class='form-control' name="restData" id="restData" cols="30" rows="15"> </textarea>
 
+    <textarea readonly class='form-control' name="fakeData" id="fakeData" cols="30" rows="15"> </textarea>
+
+
     <script src="js/l1-app.js"></script>
     
 </body>
